Bug Fix for #18136-URL is not showing in visitor details link,  #18178-Bug with Live Chat handling time
Bug Fix for #18136-URL is not showing in visitor details link,  #18178-Bug with Live Chat handling time

--- a/public/src/chat/admin.scss
+++ b/public/src/chat/admin.scss
@@ -151,19 +151,7 @@ $font-class: "ficon-"; // Change this when font class changed in glyphs comman
     }
     .info{
     	margin-top: 20px;
-    	li,
-    	a {
-    		display: inline-block;
-    		overflow: hidden;
-    		text-overflow: ellipsis;
-    		white-space: nowrap;
-    	}
-    	a {
-    		max-width: 90%;
-    		vertical-align: bottom;
-    	}
     	li{
-    		width: 100%;
     		padding-top: 6px;
     		i {
     			display: inline-block;
